--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -10,7 +10,7 @@
         mapTypeId: 'terrain'
         }
         var map = new google.maps.Map(document.getElementById("map"), mapOptions);
-        var image = "<%= image_path('wireless-signal-don.png') %>"
+        var image = "<%= asset_path('wireless-signal-don.png') %>"
         var contentString = 
             ' <div class="col-lg-3 col-md-6">' +
                 ' <!-- START panel-->' +
