--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -10,7 +10,7 @@
         mapTypeId: 'terrain'
         }
         var map = new google.maps.Map(document.getElementById("map"), mapOptions);
-        var image = '/assets/delads.png';
+        var image = '';
         var contentString = 
             ' <div class="col-lg-3 col-md-6">' +
                 ' <!-- START panel-->' +
