change line color to equal fill

--- a/app/views/charts/show.html.erb
+++ b/app/views/charts/show.html.erb
@@ -26,7 +26,7 @@ var data = {
           fill: 'origin',
           backgroundColor: '#107dac',
           data: io_data,
-          borderColor: '#5ba2df',
+          borderColor: '#107dac',
           borderWidth: 3,
         }]
       };
