--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
       <section>
          <!-- Page content-->
          <div class="content-wrapper">
+            <%= render 'layouts/messages' %>
             <%= yield %>
          </div>
       </section>
